[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.14.3",
    "fake-useragent>=2.2.0",
    "httpx>=0.28.1",
    "python-telegram-bot>=22.5",
    "requests>=2.32.5",
    "telegram>=0.0.1",
]
